[package]
name = "fomo3dgame"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fomo3dgame"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
borsh = "0.9.1"
num-derive = "0.3.3"
num-traits = "0.2.14"
solana-program = "1.7.10"
spl-math = { version="0.1.0", features=["no-entrypoint"] }
spl-token = { version="3.2.0", features=["no-entrypoint"] }
thiserror = "1.0.26"
uint = "0.9.1"

[dev-dependencies]
proptest = "1.0.0"
solana-program-test = "1.7.10"
solana-sdk = "1.7.10"
tokio = "1.10.0"
